TestSuite/PascalABCTests/errors/err0084.pas
type TClass = class
procedure Test; abstract;
end;

procedure TClass.Test;
begin
end;

begin
end.